--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   http: ^1.4.0
   loading_animation_widget: ^1.3.0
   flutter_riverpod: ^2.6.1
+  flutter_snake_navigationbar: ^0.6.1
+  image_picker: ^1.1.2
+  nanoid: ^1.0.0
+  path_provider: ^2.1.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +93,10 @@ flutter:
     - family: Molle
       fonts:
         - asset: fonts/Molle-italic.ttf
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-Bold.ttf
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
