--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   path_provider: ^2.1.1
   cached_network_image: ^3.4.1
   intl: ^0.20.2
+  carousel_slider: ^5.1.1
+  photo_view: ^0.15.0
+  url_launcher: ^6.3.2
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +77,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/
+    - assets/
+    - assets/Default_pfp.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -104,6 +109,14 @@ flutter:
         - asset: fonts/Lato-Bold.ttf
         - asset: fonts/Lato-Black.ttf
         - asset: fonts/Lato-Thin.ttf
+    - family: Inter
+      fonts:
+        - asset: fonts/Inter_24pt-Regular.ttf
+        - asset: fonts/Inter_24pt-Bold.ttf
+        - asset: fonts/Inter_24pt-Medium.ttf
+        - asset: fonts/Inter_24pt-SemiBold.ttf
+        - asset: fonts/Inter_24pt-Light.ttf
+
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
